--- a/Movie Search React/src/components/SearchCard/SearchCard.css
+++ b/Movie Search React/src/components/SearchCard/SearchCard.css
@@ -7,6 +7,8 @@
 
 }
 
+
+
 .search-card {
     padding: 15px 10px;
     display: flex;
@@ -65,7 +67,6 @@ input {
     border: none;
     border-radius: 3px;
     height: 30px;
-    min-width: 450px;
     margin-top:60px;
     padding: 5px;
     background: #393396;
@@ -125,3 +126,17 @@ input:focus {
     justify-self: flex-start;
     height: 50px;
     }
+
+@media all and (max-width:400px){
+    .search-card{
+        height:auto;
+        width: 200px;
+    }
+    input{
+width:20px;
+    }
+    .form{
+        display: flex;
+        flex-direction: column !important;
+    }
+}
